# memristorantigravity

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default_config.yaml
examples/: extract_parameters_example.py  fit_device_model.py  generate_publication_assets.py  launch_gui.py  parse_comsol_example.py  simulate_compact_models.py  simulate_crossbar_mna.py  simulate_device_nonidealities.py  simulate_pytorch_layer.py  simulate_snn_layers.py  simulate_synaptic_plasticity.py  train_snn_mnist.py
src/compact_models/: __init__.py  base.py  simmons.py  vteam.py  windows.py  yakopcic.py
src/comsol/: __init__.py  dataset.py  parser.py
src/crossbar/: __init__.py  array.py
src/device/: __init__.py  memristor.py
src/extraction/: __init__.py  exceptions.py  extractor.py  metrics.py
src/fitting/: __init__.py  fitter.py  loss.py
src/gui/: __init__.py  main_window.py  workers.py
src/gui/widgets/: __init__.py  compact_model_tab.py  comsol_tab.py  crossbar_tab.py  device_tab.py  extraction_tab.py  fitting_tab.py  snn_tab.py
src/plasticity/: __init__.py  stdp.py
src/pytorch/: __init__.py  layer.py  neuron.py
src/snn/: __init__.py  neuron.py  synapse.py
src/utils/: __init__.py  config_loader.py  logger.py
src/visualization/: __init__.py  plotter.py  tables.py
tests/: test_compact_models.py  test_crossbar.py  test_device.py  test_extraction.py  test_fitting.py  test_gui.py  test_parser.py  test_plasticity.py  test_pytorch.py  test_pytorch_snn.py  test_snn.py  test_utils.py  test_visualization.py
